--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test": "jest --coverage"
   },
   "peerDependencies": {
-    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0"
+    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -111,14 +111,14 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
     "eslint-plugin-sort-requires": "^2.1.0",
-    "husky": "^0.14.3",
-    "jest-cli": "^22.4.3",
-    "lint-staged": "^7.0.4",
-    "npmpub": "^3.1.0",
-    "prettier": "^1.12.1",
-    "stylelint": "^9.2.0"
+    "husky": "^1.3.1",
+    "jest-cli": "^24.7.1",
+    "lint-staged": "^8.1.5",
+    "npmpub": "^4.1.0",
+    "prettier": "^1.17.0",
+    "stylelint": "^10.0.1"
   }
 }
