--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test": "jest --coverage"
   },
   "peerDependencies": {
-    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0"
+    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -119,6 +119,6 @@
     "lint-staged": "^8.1.5",
     "npmpub": "^4.1.0",
     "prettier": "^1.17.0",
-    "stylelint": "^10.0.1"
+    "stylelint": "^11.0.0"
   }
 }
