Update stylelint to v13
- https://github.com/stylelint/stylelint/releases/tag/13.1.0
- https://github.com/stylelint/stylelint/releases/tag/13.0.0

Also, this updates the outdated CI configurations.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ sudo: false
 git:
   depth: 1
 cache:
-  directories:
-    - $HOME/.npm
-    - node_modules
+  yarn: true
 matrix:
   include:
-    - node_js: "11"
+    - node_js: "12"
       script: npm run jest -- --runInBand
       env: CI=tests 11
     - node_js: "10"
