--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test": "jest --coverage"
   },
   "peerDependencies": {
-    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0"
+    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0 || ^14.0.0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -119,6 +119,6 @@
     "lint-staged": "^11.0.1",
     "npmpub": "^5.0.0",
     "prettier": "^2.3.2",
-    "stylelint": "^13.13.1"
+    "stylelint": "^14.0.1"
   }
 }
