--- a/package.json
+++ b/package.json
@@ -116,8 +116,11 @@
     "eslint-plugin-sort-requires": "^2.1.0",
     "husky": "^7.0.1",
     "jest-cli": "^27.0.6",
+    "jest-preset-stylelint": "^4.2.0",
     "lint-staged": "^11.0.1",
     "npmpub": "^5.0.0",
+    "postcss-less": "^5.0.0",
+    "postcss-scss": "^4.0.2",
     "prettier": "^2.3.2",
     "stylelint": "^14.0.1"
   }
