--- a/package.json
+++ b/package.json
@@ -123,5 +123,8 @@
     "postcss-scss": "^4.0.2",
     "prettier": "^2.3.2",
     "stylelint": "^14.0.1"
+  },
+  "dependencies": {
+    "postcss-value-parser": "^4.2.0"
   }
 }
