--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "jest-preset-stylelint": "^6.0.0",
     "lint-staged": "^13.1.1",
     "npmpub": "^5.0.0",
+    "postcss": "^8.4.21",
     "postcss-less": "^5.0.0",
     "postcss-scss": "^4.0.2",
     "prettier": "^2.3.2",
