--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kristerkari/stylelint-high-performance-animation#readme",
   "files": [
     "index.js",
+    "utils",
     "CHANGELOG.md",
     "README.md"
   ],
@@ -35,16 +36,16 @@
     "transition"
   ],
   "scripts": {
-    "jest": "jest",
+    "jest": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest",
     "lint": "eslint . --ignore-path .gitignore",
     "precommit": "lint-staged",
     "pretest": "npm run lint",
     "prettify": "prettier --write '**/*.{js,json}'",
     "release": "np",
-    "test": "jest --coverage"
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --coverage"
   },
   "peerDependencies": {
-    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0 || ^14.0.0 || ^15.0.0"
+    "stylelint": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -112,6 +113,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "eslint-plugin-sort-requires": "^2.1.0",
     "husky": "^7.0.1",
@@ -123,7 +125,7 @@
     "postcss-less": "^6.0.0",
     "postcss-scss": "^4.0.2",
     "prettier": "^3.0.0",
-    "stylelint": "^15.1.0"
+    "stylelint": "^16.1.0"
   },
   "dependencies": {
     "postcss-value-parser": "^4.2.0"
